@@ -1,3 +1,8 @@
+2011-09-23  Dominique Dumont  <domi.dumont@free.fr> 1.328
+
+    * ListEditor: enable apply_fix button
+    * TkUI: Restrict cut buffer paste to tree widget
+
 2011-09-16  Dominique Dumont  <domi.dumont@free.fr> 1.327
 
     * TkUI.pm:
